--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
     "node-unique-id-generator": "^0.1.0"
   },
